--- a/css/addon.css
+++ b/css/addon.css
@@ -1,32 +1,50 @@
-
 ul {
-    list-style: none;
+	list-style: none;
 }
 
 .post-image img.round {
-    width: 400px !important;
-    height: 400px !important;
+	width: 400px !important;
+	height: 400px !important;
 }
 
-.carousel-control-prev, .carousel-control-next {
-    border: none !important;
+.carousel-control-prev,
+.carousel-control-next {
+	border: none !important;
 }
-ul.default li{
-    padding: 0.20em 0em;
-    /*font-size: 0.90em;*/
-    border-top: 1px solid;
-    border-color: rgba(0, 0, 0, 0.1);
+
+ul.default li {
+	padding: 0.20em 0em;
+	/*font-size: 0.90em;*/
+	border-top: 1px solid;
+	border-color: rgba(0, 0, 0, 0.1);
 }
+
 ul.default li:first-child {
-    border-top: none;
+	border-top: none;
 }
+
 .carousel-item {
-    height: 460px;
-    overflow: hidden;
+	height: 460px;
+	overflow: hidden;
 }
-html{
-    min-width: 1366px;
+
+html {
+	min-width: 1366px;
 }
-p strong{
-    color: #404040;
+
+p strong {
+	color: #404040;
 }
+
+marquee {
+	display: inline-block;
+	overflow: hidden;
+	text-align: initial;
+	position: relative;
+	L white-space: nowrap;
+	top: 10px;
+	left: 10px;
+	padding-top: 30px;
+}
+
+L
